--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -26,3 +26,11 @@ activity=Activitis
 clients=Clients
 addRequests=Add requests
 deleteRequests=Delete Requests
+enterEmail=Enter email
+enterPassword=Enter password
+noAccount=Don't have an account?
+loginTitle=Login
+haveAcc=Already have an account?
+createAcc=Create account
+enterFirstName=Enter first name
+enterLastName=Enter last name
