--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -4,7 +4,6 @@ firstName=First name
 homePage=Home
 lastName=Last name
 password=Password
-phone=Phone
 logIn=Log In
 signUp=Sign Up
 profile=Profile
@@ -22,7 +21,7 @@ deleteAssign=Delete assign
 createAssign=Create assign
 return=Return
 myAssignments=My assignments
-activity=Activitis
+activity=Activities
 clients=Clients
 addRequests=Add requests
 deleteRequests=Delete Requests
@@ -34,3 +33,7 @@ haveAcc=Already have an account?
 createAcc=Create account
 enterFirstName=Enter first name
 enterLastName=Enter last name
+russianLang=Russian
+ukrainianLang=Ukrainian
+englishLang=English
+assignments=Assignments
