--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,4 +3,6 @@ firstNameError=Incorrect first name
 lastNameError=Incorrect last name
 loginOrPassError = Incorrect login or password
 passwordError=Password must be longer than 6 signs
+usedActivityError=You already have this activity.
 usedEmailError=Email already used
+inputNumberError Incorrect number input.Please, enter correct number.
